* Change deprecated new URL(addrs) to new URI(addrs).toURL().